partenaire form, signin and signup design ok

--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -23,7 +23,7 @@
                 <mat-form-field appearance="fill">
                     <mat-label>Type de payment</mat-label>
                     <mat-select formControlName="payment">
-                      <mat-option value="option">Payer à la livraison</mat-option>
+                      <mat-option value="none">Payer à la livraison</mat-option>
                       <!--<mat-option value="option">Option</mat-option>-->
                     </mat-select>
                 </mat-form-field>
