--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -1,17 +1,24 @@
 <mat-card>
   <mat-card-content>
-      <h3>Réinitialisation de mot de passe</h3>
-      <form class="example-form">
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Etrez votre email" #passwordResetEmail required>
-          <mat-error>
-            Email incorrect
-          </mat-error>
-        </mat-form-field>
-        <button mat-raised-button value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)" color="primary">Connexion</button>
-      </form>
+      <div class="row justify-content-center">
+        <form class="example-form">
+          <div class="row justify-content-center">
+            <h3>Réinitialisation de votre mot de passe</h3>
+          </div>
+          <mat-form-field class="example-full-width">
+            <input matInput placeholder="Etrez votre email" #passwordResetEmail required>
+            <mat-error>
+              Email incorrect
+            </mat-error>
+          </mat-form-field>
+          <div class="row justify-content-center">
+            <button mat-raised-button value="Reset Password" (click)="authService.ForgotPassword(passwordResetEmail.value)" color="primary">Connexion</button>
+          </div>
+          <div class="redirectToLogin row justify-content-center">
+            <span>Aller à ? <a class="redirect" routerLink="/sign-in">Se connecter</a></span>
+          </div>
+        </form>
+
+      </div>
   </mat-card-content>
-    <div class="redirectToLogin">
-      <span>Aller à ? <a class="redirect" routerLink="/sign-in">Se connecter</a></span>
-    </div>
 </mat-card>
