--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,31 +46,21 @@
         >
           <mat-carousel-slide
             #matCarouselSlide
-            image='assets/images/miam2.jpeg'
-            overlayColor="#00000040"
-            [hideOverlay]="false"
-          >
-            <div
-              style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center"
-            >
-              <button
-                mat-flat-button
-                
-              >
-                Click me!
-              </button>
-            </div>
-          </mat-carousel-slide>
-          <mat-carousel-slide
-            #matCarouselSlide
             image='assets/images/miam1.jpeg'
             overlayColor="#00000040"
             [hideOverlay]="false"
           >
+          </mat-carousel-slide>
+          <mat-carousel-slide
+            #matCarouselSlide
+            image='assets/images/partenaire.png'
+            overlayColor="#00000040"
+            [hideOverlay]="false"
+          >
             <div
               style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center"
             >
-              <button
+              <button (click)='toBePartener()' 
                 mat-flat-button
                 
               >
