--- a/src/app/components/sign-in/sign-in.component.css
+++ b/src/app/components/sign-in/sign-in.component.css
@@ -7,3 +7,11 @@
   .example-full-width {
     width: 100%;
   }
+  mat-card {
+    background-image: url('/assets/images/food.jpg');
+  }
+  form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    width: 100%;
+  }
