--- a/src/app/components/add-food/add-food.component.html
+++ b/src/app/components/add-food/add-food.component.html
@@ -13,14 +13,14 @@
     <br>
     <mat-form-field style="width: 100%;" appearance="fill">
         <mat-label>Description du plat</mat-label>
-        <textarea matInput rows="2" cols="40" formControlName="description"></textarea>
+        <textarea matInput rows="2" cols="40" formControlName="description" required></textarea>
     </mat-form-field>
     
     <br>
     <mat-form-field appearance="fill">
         <mat-label>Categorie</mat-label>
         <mat-select formControlName="category">
-          <mat-option value="Plat burlinabé">Plat burlinabé</mat-option>
+          <mat-option value="Plat burlinab">Plat burlinabe</mat-option>
           <mat-option value="Poulet">Poulet</mat-option>
           <mat-option value="Vennoiserie">Vennoiserie</mat-option>
           <mat-option value="Fastfood">Fastfood</mat-option>
