--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -4,40 +4,42 @@
             <mat-card-content>
               <form class="example-form" [formGroup]="form" (ngSubmit)="onSubmit()">
                 <h2>Finalisez votre commande</h2>
-                <mat-error *ngIf="checkOutInvalid">
-                  Renseignez correctement les champs
-                </mat-error>
-                <mat-form-field appearance="fill">
-                  <input matInput placeholder="Nom" formControlName="username" required>
-                  <mat-error>
-                    Nom incorrect
+                <div class="form-field">
+                  
+                  <mat-error *ngIf="checkOutInvalid">
+                    Renseignez correctement les champs
                   </mat-error>
-                </mat-form-field>
-                <mat-form-field appearance="fill">
-                  <input matInput type="number" placeholder="Numero" formControlName="numero" required>
-                  <mat-error>
-                    Le numero doit avoir 8 chiffres
-                  </mat-error>
-                </mat-form-field>
-                <br>
-                <mat-form-field appearance="fill">
-                    <mat-label>Type de payment</mat-label>
-                    <mat-select formControlName="payment">
-                      <mat-option value="none">Payer à la livraison</mat-option>
-                      <!--<mat-option value="option">Option</mat-option>-->
-                    </mat-select>
-                </mat-form-field>
-                <mat-form-field appearance="fill">
-                  <mat-label>Selectionnez votre lieu de livraison</mat-label>
-                  <input type="text"  matInput [(ngModel)]="district" [formControl]="districtControl" [matAutocomplete]="auto">
-                  <mat-autocomplete #auto="matAutocomplete"  [displayWith]="getDistrict">
-                    <mat-option *ngFor="let option of filteredDistricts | async" [value]="option">
-                      {{option.name}}
-                    </mat-option>
-                  </mat-autocomplete>
-                </mat-form-field>
-                <br>
-                <button class="back-btn" mat-button [mat-dialog-close]="" cdkFocusInitial>Retour</button>
+                  <mat-form-field class="fill">
+                    <input matInput placeholder="Nom" formControlName="username" required>
+                    <mat-error>
+                      Nom incorrect
+                    </mat-error>
+                  </mat-form-field>
+                  <mat-form-field class="fill">
+                    <input matInput type="number" placeholder="Numero" formControlName="numero" required>
+                    <mat-error>
+                      Le numero doit avoir 8 chiffres
+                    </mat-error>
+                  </mat-form-field>
+                  <br>
+                  <mat-form-field class="fill">
+                      <mat-label>Type de payment</mat-label>
+                      <mat-select formControlName="payment">
+                        <mat-option value="none">Payer à la livraison</mat-option>
+                        <!--<mat-option value="option">Option</mat-option>-->
+                      </mat-select>
+                  </mat-form-field>
+                  <mat-form-field class="fill">
+                    <mat-label>Selectionnez votre lieu de livraison</mat-label>
+                    <input type="text"  matInput [(ngModel)]="district" [formControl]="districtControl" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete"  [displayWith]="getDistrict">
+                      <mat-option *ngFor="let option of filteredDistricts | async" [value]="option">
+                        {{option.name}}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                </div>
+                <button class="back-btn" mat-button (click)="onNoClick()"  cdkFocusInitial>Retour</button>
                 <button mat-raised-button color="warn">Finaliser</button>
               </form>
             </mat-card-content>
