--- a/src/app/components/food/food.component.html
+++ b/src/app/components/food/food.component.html
@@ -6,7 +6,7 @@
   
   <button mat-raised-button (click)="openDialog()" color="primary">Ajouter</button>
   
-  <div class="mat-elevation-z8">
+  <div class="example-container mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
   
   
