--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
                         <p>S'abonner a la newsletter pour recevoir nos offres en temps reels </p>
                         <form method="post" class="form-inline">                
                             <input name="EMAIL" id="email" placeholder="Enter Your Email" class="form-control" type="email">
-                            <button  type="submit" mat-raised-button>S'abonné</button>
+                            <button  type="submit" mat-raised-button>S'abonner</button>
                         </form>
                     </div>
                 </div>
