--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,9 @@
         <mat-icon>menu</mat-icon>
       </button>
       <a class="a-logo" mat-button href=""><img class="logo" src="assets/logos/miam/miam2.png" alt="" ></a>
+      <a mat-list-item *ngIf="currentUser === null"  > 
+        <mat-icon matBadge={{itemNumber}} [routerLink] = "['order-page']" (click)="sidenav.toggle()" matBadgeColor="warn">shopping_cart</mat-icon>
+      </a> 
       <span class="menu-spacer"></span>
       <div fxShow="true" fxHide.lt-md>
         <!-- The following menu items will be hidden on both SM and XS screen sizes -->
@@ -77,6 +80,10 @@
     <mat-sidenav-content fxLayout="column">  
       <router-outlet></router-outlet>
       <app-footer> </app-footer>
+      <div class="botton-nav">
+        <ngx-bottom-nav [items]="items"></ngx-bottom-nav>
+      </div>
+      
     </mat-sidenav-content>
   </mat-sidenav-container>
   
