--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -30,6 +30,7 @@ $admin-kom-theme: mat-light-theme($admin-kom-primary, $admin-kom-accent, $admin-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
+@import '~ngx-bottom-nav/theming';
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -53,3 +54,4 @@ $admin-kom-theme: mat-light-theme($admin-kom-primary, $admin-kom-accent, $admin-
 // that you are using.
 @include angular-material-theme($admin-kom-theme);
 
+@include ngx-bottom-nav-theme($admin-kom-theme);
