--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,11 +60,14 @@
           </div>
         </mat-menu>
     </div>
-      <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['order/waiting']" *ngIf="currentUser !== null"> Commande  <span class="sr-only">(current)</span> </a>
-      <!-- <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['order/delivered']" *ngIf="currentUser !== null" > Livrer </a> -->
+      <!-- <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['order/waiting']" *ngIf="currentUser !== null"> Commande  <span class="sr-only">(current)</span> </a>
+      <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['order/delivered']" *ngIf="currentUser !== null" > Livrer </a> 
       
         <a mat-list-item (click)="sidenav.toggle()" [routerLink]="['food']" *ngIf="currentUser !== null"> 
         Mes plats 
+        </a> -->
+        <a mat-list-item   (click)="sidenav.toggle(); authService.SignOut()" *ngIf="currentUser !== null" > 
+          Deconnexion
         </a> 
         <span class="example-spacer"></span>
       </mat-nav-list>
