--- a/src/app/components/account/account.component.html
+++ b/src/app/components/account/account.component.html
@@ -19,7 +19,7 @@
               <br>
             <mat-form-field class="fill">
                 <mat-label>Adresse</mat-label>
-                <input type="text" matInput  [formControl]="districtControl" [matAutocomplete]="auto">
+                <input type="text" matInput [(ngModel)]="district"  [formControl]="districtControl" [matAutocomplete]="auto">
                 <mat-autocomplete #auto="matAutocomplete"  [displayWith]="getDistrict">
                   <mat-option *ngFor="let option of filteredDistricts | async" [value]="option">
                     {{option.name}}
@@ -27,10 +27,10 @@
                 </mat-autocomplete>
               </mat-form-field>
           </div>
-                <button mat-raised-button color="warn">Modifier</button>
-                <div class="sigin-link" >
-                  <a color="warn" mat-raised-button routerLink=''> Annuler </a>
-                </div>
+            <div class="row justify-content-center">
+              <button class="back" mat-raised-button routerLink=''> Annuler </button>
+              <button class="submit" mat-raised-button color="warn">Modifier</button>
+            </div>
          </form>
       </div>
     </mat-card-content>
