--- a/src/app/components/sign-in/sign-in.component.html
+++ b/src/app/components/sign-in/sign-in.component.html
@@ -28,6 +28,7 @@
         </div>
         <div class="forgotPassword">
           <a routerLink="/forgot-password">Mot de passe oubliez?</a>
+          <a routerLink="/sign-up">Creer un compte</a>
         </div>
       </form>
     </div>
